--- a/Client/twiths_/Storyboard/Jjim.storyboard
+++ b/Client/twiths_/Storyboard/Jjim.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="twK-6Y-2F8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="twK-6Y-2F8">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -52,8 +52,15 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="내가 찜한 투어" id="MPx-Ci-bW0">
-                        <barButtonItem key="rightBarButtonItem" title="편집" id="4N1-gU-Mym"/>
+                        <barButtonItem key="rightBarButtonItem" title="편집" id="4N1-gU-Mym">
+                            <connections>
+                                <action selector="JjimTourEdit:" destination="YD5-jI-xMS" id="WHB-TP-UVK"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="editButton" destination="4N1-gU-Mym" id="1S2-tj-cFz"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GMK-1y-CWX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
