진행중인 투어, 찜한 투어 삭제 시 확인 창 띄우기 및 랜드마크 생성 시 Cancel을 누르면 취소되게 구현

--- a/Client/twiths_/Storyboard/TourCreate.storyboard
+++ b/Client/twiths_/Storyboard/TourCreate.storyboard
@@ -102,12 +102,12 @@
                     <navigationItem key="navigationItem" title="랜드마크 추가" id="vRc-xL-UDx">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="lp6-kd-TnE">
                             <connections>
-                                <segue destination="CiO-HI-rjk" kind="unwind" unwindAction="LandmarkCreateToTourCreateSegueWithSegue:" id="DBy-Cp-Zsb"/>
+                                <segue destination="CiO-HI-rjk" kind="unwind" identifier="LandmarkCancel" unwindAction="LandmarkCreateToTourCreateSegueWithSegue:" id="DBy-Cp-Zsb"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="yre-6S-UzW">
                             <connections>
-                                <segue destination="CiO-HI-rjk" kind="unwind" unwindAction="LandmarkCreateToTourCreateSegueWithSender:" id="afQ-QL-IWa"/>
+                                <segue destination="CiO-HI-rjk" kind="unwind" identifier="LandmarkDone" unwindAction="LandmarkCreateToTourCreateSegueWithSender:" id="afQ-QL-IWa"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
