--- a/Client/twiths_/Storyboard/TourCreate.storyboard
+++ b/Client/twiths_/Storyboard/TourCreate.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -91,6 +92,31 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="97" id="Vif-i9-NG0">
+                                        <rect key="frame" x="0.0" y="500" width="375" height="97"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Vif-i9-NG0" id="orE-HB-enl">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="96.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="15s-kE-4CP">
+                                                    <rect key="frame" x="195" y="22" width="164" height="53"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" title="위치 지정하기"/>
+                                                    <connections>
+                                                        <segue destination="R2L-h1-bVk" kind="presentation" id="3lv-FC-8sD"/>
+                                                    </connections>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ov0-go-JB3">
+                                                    <rect key="frame" x="32" y="38" width="116" height="36"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -112,6 +138,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="CheckLocationSelectedLabel" destination="ov0-go-JB3" id="G1W-IY-cQG"/>
                         <outlet property="imgView1" destination="qep-VD-a4I" id="EYw-7m-qPT"/>
                         <outlet property="landmarkDetailField" destination="f39-eN-maD" id="WhX-4Z-19D"/>
                         <outlet property="landmarkNameFIeld" destination="KZn-ct-VlL" id="A2c-em-tsJ"/>
@@ -121,6 +148,53 @@
                 <exit id="CiO-HI-rjk" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="6440.8000000000002" y="1178.8605697151424"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="wY6-k5-nLi">
+            <objects>
+                <navigationController id="R2L-h1-bVk" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XZ4-3H-rq6">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="1Wx-y6-Kj2" kind="relationship" relationship="rootViewController" id="FoR-GD-g7J"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0qt-cp-aZ0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6483" y="2014"/>
+        </scene>
+        <!--Create Landmark LocationVC-->
+        <scene sceneID="P7x-YH-tvA">
+            <objects>
+                <viewController id="1Wx-y6-Kj2" customClass="CreateLandmarkLocationVC" customModule="twiths_" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="GjX-wS-iiz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="RMt-Z3-adR"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="gxx-X6-kek">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="vra-eO-OPY">
+                            <connections>
+                                <segue destination="Zn9-Cz-aR3" kind="unwind" unwindAction="MapToCreateLandmarkWithSegue:" id="pNC-xn-aPA"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="eAd-nW-Xvi">
+                            <connections>
+                                <segue destination="Zn9-Cz-aR3" kind="unwind" identifier="CreateMapDone" unwindAction="MapToCreateLandmarkWithSender:" id="pg7-Og-yhN"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="mapView" destination="GjX-wS-iiz" id="H8g-eO-Yvt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fwl-jN-JnY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Zn9-Cz-aR3" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="7527" y="2018"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="I91-Ki-jUc">
